--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,4 +29,61 @@ a{
   height: max-content;
   margin: 26px auto;
 }
+.upload-photo{
+  color:blue;
+  width:100%;
+  height:55px;
+  border:none; 
+  font-Weight:700; 
+  background:none; 
+  border-Bottom:1px solid grey;
+}
+.remove-photo{
+  width:100%; 
+  height:55px; 
+  color:red; 
+  border:none; 
+  font-Weight:700; 
+  background:none;
+  border-Bottom:1px solid grey;
+}
+.show-modal{
+  width:100%;
+  height:55px; 
+  border:none; 
+  background:none; 
+  font-Weight:700; 
+  border-Bottom:1px solid grey;
+}
 
+.upload-file-input{
+  color: transparent !important;
+}
+.upload-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.upload-file-input::before{
+  content: 'upload profile photo';
+  color: blue;
+  font-weight: 700;
+  border: transparent !important;
+  outline: none !important;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.upload-file-input-input:hover::before {
+  border-color: transparent;
+}
+.upload-file-input:active::after {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+  border: transparent;
+  outline: none;
+}
+.avatar{
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
